[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blindml"
version = "0.1.0"
description = "A client library for FHE-enabled machine learning using Concrete-ML."
readme = "README.md"
authors = [
    { name = "Thumbtics", email = "info@thumbtics.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = "==3.8.20"
dependencies = [
    'concrete-ml==1.4.0',
    'requests>=2.28.0']


